# rinet

./: .gitignore  Cargo.toml  README.md  default.nix
finally/: Cargo.toml
finally/src/: main.rs  net.rs  rule.rs  symbol.rs  term.rs
finally/src/symbol/: compact.rs
raw-arena/: Cargo.toml
raw-arena/src/: arenaraw.rs  lib.rs
src/: arena.rs  examples.rs  inet.rs  main.rs  net.rs  test.rs.old
src/examples/: arith.rs  combinators.rs  fib.rs  nat.rs
src/inet/: arena.rs  arena.rs.old  arenaraw.rs  cell.rs  equation.rs  heap.rs  net.rs  rule.rs  runtime.rs  runtime2.rs  symbol.rs  term.rs  util.rs  var.rs
src/net/: arena.rs  dsl.rs  main.rs  rule.rs  runtime.rs  symbol.rs  term.rs
src/net/heap/: rule.rs  runtime.rs  symbol.rs  term.rs
src/net/old/: arena.rs  channel.rs  finally.rs  heap.rs
