[package]
name = "rinet"
description = "A runtime for interaction nets"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
authors = ["Yuri de Wit <ydewit@gmail.com>"]
# categories = [..]
# keywords = [..]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "finally",
  "raw-arena"
]

[dependencies]
rayon = "1.6"
tracing = "0.1"
tracing-subscriber = "0.3"
raw-arena = { path = "./raw-arena" }